# python-workflow

./: .carthorse.yaml  .gitignore  CHANGELOG.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml  uv-ci.yml
tests/sample-python-project/: README.md  pyproject.toml
tests/sample-python-project/src/test_package/: __init__.py
tests/sample-python-project/tests/: test_greet.py
