[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sample-python-project"
version = "0.1.0"
description = "Sample Python project for testing python-workflow workflows"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
test-extra = ["requests>=2.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "types-requests>=2.0",
]
extras = [
    "requests>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/test_package"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.mypy]
strict = true

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
precision = 2
